页面修复，完善。 name: guofeng date： 2017-2-20 17:58

--- a/smtcl_erp/WebRoot/html/dddd.html
+++ b/smtcl_erp/WebRoot/html/dddd.html
@@ -5,12 +5,12 @@
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 </head>
 <body>
-	<div class="row margin-top-40 account-company-auth" id="xy" style="overflow-y:scroll;background-color:white;height:94%;width:98%;margin-left:2%;">
+	<div class="row margin-top-10 account-company-auth" id="xy" style="overflow-y:scroll;background-color:white;height:94%;width:98%;margin-left:2%;">
 		<!-- 配方指令队列 -->
 		<div id="dd_id" class="row">
 			<form id="dd_form" class="row">
 				<div class="col-md-12">
-					<div class="row" style="margin-top:-55px;margin-left:-10px;">
+					<div class="row" style="margin-top:-40px;margin-left:-10px;">
 			            <div class="col-md-1" style="width:220px;">
 							<input id="getGdId" type="text" placeholder="--- 请输入工单号 ---" class="form-control"/>
 						</div>
@@ -114,7 +114,8 @@
 							<table class="table table-bordered" style="width:100%;">
 					           <thead>
 					               <tr>
-					                  <th class="text-center" style="width: 5%;" bgcolor="#EFEFEF">工单序号</th>
+					                  <th class="text-center" style="width: 8%;" bgcolor="#EFEFEF">工单号</th>
+					                  <th class="text-center" style="width: 8%;" bgcolor="#EFEFEF">模组号</th>
 					                  <th class="text-center" style="width: 8%;" bgcolor="#EFEFEF">载具号</th>
 					                  <th class="text-center" style="width: 8%;" bgcolor="#EFEFEF">物料编码</th>
 					                  <th class="text-center" style="width: 8%;" bgcolor="#EFEFEF">物料描述</th>
@@ -124,6 +125,7 @@
 					                  <th class="text-center" style="width: 8%;" bgcolor="#EFEFEF">电芯2</th>
 					                  <th class="text-center" style="width: 8%;" bgcolor="#EFEFEF">电芯3</th>
 					                  <th class="text-center" style="width: 8%;" bgcolor="#EFEFEF">电芯4</th>
+					                  <th class="text-center" style="width: 8%;" bgcolor="#EFEFEF">工位</th>
 					               </tr>
 					           </thead>
 							</table>
