--- a/smtcl_erp/WebRoot/html/dddd.html
+++ b/smtcl_erp/WebRoot/html/dddd.html
@@ -142,8 +142,7 @@
 	</div>
 	<div class="col-md-3" style="width:400px;"></div>
 	<div class="col-md-2">
-		<a class="button button-3d button-primary button-rounded"
-			style="position:absolute;top:12px;font-family:'微软雅黑';" onclick="null">订单调度</a>
+		<a class="button button-glow button-rounded button-raised button-primary butRow">订单调度</a>
 	</div>
 	<script type="text/javascript" src="/smtcl_erp/html/js/dddd.js"></script>
 </body>
