--- a/smtcl_erp/WebRoot/html/h_home.html
+++ b/smtcl_erp/WebRoot/html/h_home.html
@@ -7,64 +7,6 @@
 <body>
 	<div class="row margin-top-10 account-company-auth" id="xy" style="overflow-y:hidden;background-color:white;height:94%;width:98%;margin-left:2%;">
 		<div id="home_id" class="row">
-			<style>
-				.shusongxian{
-					margin-left:3px;
-					width:50px;
-					line-height:30.5px;
-					font-size:15px;
-					border:1px solid rgb( 234 , 234 , 234 );
-				}
-				.huancunku{
-					margin-left:3px;
-					width:50px;
-					line-height:61.5px;
-					font-size:15px;
-					border:1px solid rgb( 234 , 234 , 234 );
-				}
-				.head_hui{
-					text-align: center;
-					float:left;
-					margin-left:3px;
-					height:45px;
-					width:50px;
-					color:#000000;
-					font-size:15px;
-					border:1px solid rgb( 234 , 234 , 234 );
-				}
-				.head_lan{
-					text-align: center;
-					margin-left:3px;
-					height:45px;
-					width:50px;
-					float:left;
-					color:#ffffff;
-					font-size:15px;
-					background-color:rgb( 75 , 176 , 249 );
-				}
-				.hui{
-					text-align: center;
-					margin-left:3px;
-					line-height:45px;
-					height:45px;
-					width:50px;
-					float:left;
-					color:#000000;
-					font-size:15px;
-					background-color:rgb( 234 , 234 , 234 );
-				}
-				.lan{
-					text-align: center;
-					margin-left:3px;
-					line-height:45px;
-					height:45px;
-					width:50px;
-					float:left;
-					color:#ffffff;
-					font-size:15px;
-					background-color:rgb( 75 , 176 , 249 );
-				}
-			</style>
 			<form id="home_form" class="row">
 				<div class="col-md-6">
 					<div class="row" style="margin-top:0px;width:1200px;float:left;">
@@ -84,10 +26,18 @@
 						<div class="hui no" id="TOP-13ST" name="TOP-ST">13ST</div>
 						<div class="head_hui no" id="TOP-14ST" name="HEAD_TOP-ST">后升降机</div>
 						<div style="margin-left:5px;float:left;">
-							<input type="button" style="height:45px;width:85px;" value="启动调度"/>
-							<input type="button" style="height:45px;width:85px;" value="复位"/>
-							<input type="button" style="height:45px;width:85px;" value="归零启动"/>
-							<input type="button" style="height:45px;width:85px;" value="断点启动"/>
+							<div class="qfgd" id="qidongdiaodu_top">
+								<span>启动调度</span>
+							</div>
+							<div class="qfgd" id="fuwei_top">
+								<span>复位</span>
+							</div>
+							<div class="qfgd" id="guilingqidong_top">
+								<span>归零启动</span>
+							</div>
+							<div class="qfgd" id="duandianqidong_top">
+								<span>断点启动</span>
+							</div>
 						</div>
 					</div>
 					<div class="row" style="margin-top:10px;width:850px;float:left;">
@@ -198,10 +148,18 @@
 						<div class="hui no" id="BOTTOM-13ST" name="BOTTOM-ST">13ST</div>
 						<div class="head_hui no" id="BOTTOM-14ST" name="HEAD_BOTTOM-ST">后升降机</div>
 						<div style="margin-left:5px;float:left;">
-							<input type="button" style="height:45px;width:85px;" value="启动调度"/>
-							<input type="button" style="height:45px;width:85px;" value="复位"/>
-							<input type="button" style="height:45px;width:85px;" value="归零启动"/>
-							<input type="button" style="height:45px;width:85px;" value="断点启动"/>
+							<div class="qfgd" id="qidongdiaodu_bottom">
+								<span>启动调度</span>
+							</div>
+							<div class="qfgd" id="fuwei_bottom">
+								<span>复位</span>
+							</div>
+							<div class="qfgd" id="guilingqidong_bottom">
+								<span>归零启动</span>
+							</div>
+							<div class="qfgd" id="duandianqidong_bottom">
+								<span>断点启动</span>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -218,12 +176,12 @@
 	</div>
 	<div class="col-md-3" style="width:400px;"></div>
 	<div class="col-md-2">
-		<a class="button button-3d button-primary button-rounded"
-			style="position:absolute;top:12px;font-family:'微软雅黑';" id="showGDFrame">显示GDFrame</a>
+		<a class="button button-glow button-rounded button-raised button-primary butRow" 
+		   id="showGDFrame">显示GDFrame</a>
 	</div>
 	<div class="col-md-2">
-		<a class="button button-3d button-primary button-rounded"
-			style="position:absolute;top:12px;font-family:'微软雅黑';" id="getHck">更新状态</a>
+		<a class="button button-glow button-rounded button-raised button-primary butRow"
+		   id="getHck">更新状态</a>
 	</div>
 	<script type="text/javascript" src="/smtcl_erp/html/js/h_home.js"></script>
 </body>
