大更新，库房完成80%

--- a/smtcl_erp/WebRoot/html/plc.html
+++ b/smtcl_erp/WebRoot/html/plc.html
@@ -8,11 +8,11 @@
 	<div class="row margin-top-10 account-company-auth" id="xy" style="overflow-y:scroll;background-color:white;height:94%;width:98%;margin-left:2%;">
 		<div id="ddgl_id" class="row">
 			<form id="ddgl_form" class="row">
-				信息查询
+				PLC
 			</form>
 		</div>
 	</div>
 	<div class="col-md-3" style="width:400px;"></div>
-	<script type="text/javascript" src="/smtcl_erp/html/js/xxcx.js"></script>
+	<script type="text/javascript" src="/smtcl_erp/html/js/plc.js"></script>
 </body>
 </html>
