--- a/smtcl_erp/WebRoot/html/dddd.html
+++ b/smtcl_erp/WebRoot/html/dddd.html
@@ -5,12 +5,12 @@
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 </head>
 <body>
-	<div class="row margin-top-10 account-company-auth" id="xy" style="overflow-y:scroll;background-color:white;height:94%;width:98%;margin-left:2%;">
-		<!-- 配方指令队列 -->
+	<div class="row margin-top-10 account-company-auth" id="xy" style="overflow-y:hidden;background-color:white;height:94%;width:98%;margin-left:2%;">
+		<!-- 配方指令队列 overflow-y:scroll -->
 		<div id="dd_id" class="row">
 			<form id="dd_form" class="row">
 				<div class="col-md-12">
-					<div class="row" style="margin-top:-40px;margin-left:-10px;">
+					<div class="row" style="margin-top:-45px;margin-left:-10px;">
 			            <div class="col-md-1" style="width:220px;">
 							<input id="getGdId" type="text" placeholder="--- 请输入工单号 ---" class="form-control"/>
 						</div>
