--- a/smtcl_erp/WebRoot/html/jcsz.html
+++ b/smtcl_erp/WebRoot/html/jcsz.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 </head>
 <body>
-	<div class="row margin-top-10 account-company-auth" id="xy" style="overflow-y:scroll;background-color:white;height:94%;width:98%;margin-left:2%;">
+	<div class="row margin-top-10 account-company-auth" id="xy" style="overflow-y:hidden;background-color:white;height:94%;width:98%;margin-left:2%;">
 		<!-- 物料 -->
 		<div id="wuliao" class="row">
 			<form id="wl_form">
@@ -372,7 +372,7 @@
 		        </div>
 	        </form>
         	<!-- 按钮 -->
-			<div class="row" style="margin-top:0px;">
+			<div class="row" style="margin-top:-10px;">
 				<div class="col-md-1"></div>
 				<div class="col-md-10" style="margin-left: 9px;">
 				    <div class="col-md-2" style="width:215px;">
@@ -444,7 +444,7 @@
 			        <!-- 载具 end -->
 				</div>
 			</div>
-			<div class="row" style="margin-top:10px;">
+			<div class="row" style="margin-top:5px;">
 				<div class="col-md-1"></div>
 				<div class="col-md-10" style="margin-left: 9px;">
 				    <div class="col-md-2" style="width:215px;">
