--- a/smtcl_erp/WebRoot/html/kfcz.html
+++ b/smtcl_erp/WebRoot/html/kfcz.html
@@ -36,16 +36,26 @@
 					    		</div>
 					    		<div class="col-md-10">
 									<div class="col-md-2 text-right" style="padding: 5 0 0 0;">
-						                <span>托盘编号：</span>
+						                <span><span style="color:red;">*</span>托盘编号：</span>
 						            </div>
 						            <div class="col-md-4">
-						                <input id="tp_code" type="text" class="form-control"/>
+						            	<div class="input-group">
+						               		<input id="tp_code" type="text" style="z-index:0;" readonly="readonly" class="form-control"/>
+							                <span class="input-group-btn">
+										        <button class="btn btn-default" id="tp_code_click" type="button">读取</button>
+									   		</span>
+								   		</div>
 						            </div>
 									<div class="col-md-2 text-right" style="padding: 5 0 0 0;">
-						                <span>物料：</span>
+						                <span><span style="color:red;">*</span>物料：</span>
 						            </div>
 						            <div class="col-md-4">
-						                <input id="wl_code" type="text" class="form-control"/>
+							            <div class="input-group">
+						               		<input id="wl_code" type="text" style="z-index:0;" readonly="readonly" class="form-control"/>
+							                <span class="input-group-btn">
+										        <button class="btn btn-default" id="wl_code_click" type="button">选择</button>
+									   		</span>
+								   		</div>
 						            </div>
 								</div>
 					    	</div>
@@ -53,27 +63,27 @@
 					    		<div class="col-md-2"></div>
 					    		<div class="col-md-10">
 									<div class="col-md-2 text-right" style="padding: 5 0 0 0;">
-						                <span>数量：</span>
+						                <span><span style="color:red;">*</span>数量：</span>
 						            </div>
 						            <div class="col-md-2">
 						                <input id="up_number" type="number" min="1" style="width:80px;" class="form-control"/>
 						            </div>
 									<div class="col-md-2 text-right" style="padding: 5 0 0 0;">
-						                <span>去往货位：</span>
+						                <span><span style="color:red;">*</span>去往货位：</span>
 						            </div>
 						            <div class="col-md-2">
 						                <input id="go_huowei" type="text" style="width:100px;" class="form-control"/>
 						            </div>
 									<div class="col-md-2 text-right" style="padding: 5 0 0 0;">
-						                <span>方向：</span>
+						                <span><span style="color:red;">*</span>方向：</span>
 						            </div>
 						            <div class="col-md-2">
 						                <div class="cus-select" id="fangxiang_name">
 			                                <div class="cus-select-btn"></div>
 			                                <input id="fangxiang" type="text" readonly/> 
 			                                <ul>
-			                                	<li>A</li>
-			                                	<li>B</li>
+			                                	<li>1</li>
+			                                	<li>2</li>
 			                                </ul>
 			                            </div>
 						            </div>
@@ -88,13 +98,13 @@
 					    		</div>
 					    		<div class="col-md-10">
 									<div class="col-md-2 text-right" style="padding: 5 0 0 0;">
-						                <span>从货位：</span>
+						                <span><span style="color:red;">*</span>从货位：</span>
 						            </div>
 						            <div class="col-md-4">
 						                <input id="cong_xhdssx_huowei" type="text" class="form-control"/>
 						            </div>
 									<div class="col-md-2 text-right" style="padding: 5 0 0 0;">
-						                <span>到货位：</span>
+						                <span><span style="color:red;">*</span>到货位：</span>
 						            </div>
 						            <div class="col-md-4">
 						                <input id="dao_xhdssx_huowei" type="text" class="form-control"/>
@@ -110,13 +120,13 @@
 					    		</div>
 					    		<div class="col-md-10">
 									<div class="col-md-2 text-right" style="padding: 5 0 0 0;">
-						                <span>从工位：</span>
+						                <span><span style="color:red;">*</span>从工位：</span>
 						            </div>
 						            <div class="col-md-4">
 						                <input id="cong_ssxhhj_gongwei" type="text" class="form-control"/>
 						            </div>
 									<div class="col-md-2 text-right" style="padding: 5 0 0 0;">
-						                <span>到货位：</span>
+						                <span><span style="color:red;">*</span>到货位：</span>
 						            </div>
 						            <div class="col-md-4">
 						                <input id="dao_ssxhhj_huowei" type="text" class="form-control"/>
@@ -132,7 +142,7 @@
 					    		</div>
 					    		<div class="col-md-10">
 									<div class="col-md-2 text-right" style="padding: 5 0 0 0;">
-						                <span>从工位：</span>
+						                <span><span style="color:red;">*</span>从工位：</span>
 						            </div>
 						            <div class="col-md-10">
 						                <input id="cong_ssxhdk_gongwei" type="text" class="form-control"/>
@@ -148,7 +158,7 @@
 					    		</div>
 					    		<div class="col-md-10">
 									<div class="col-md-2 text-right" style="padding: 5 0 0 0;">
-						                <span>从货位：</span>
+						                <span><span style="color:red;">*</span>从货位：</span>
 						            </div>
 						            <div class="col-md-10">
 						                <input id="cong_hjhdk_huowei" type="text" class="form-control"/>
@@ -168,7 +178,7 @@
 					    	</div>
 					    </div>
 					</div>
-				    <div class="col-md-5">
+				    <div class="col-md-5 huowei_id">
 						<div class="row" style="margin-left:25px;margin-top:-40px;width:100%;float:left;">
 							<div class="col-md-1 kf_shusongxian"><span>输送线</span></div>
 							<div class="col-md-10" style="width:345px;">
