--- a/smtcl_erp/WebRoot/html/plc.html
+++ b/smtcl_erp/WebRoot/html/plc.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 	<div class="row margin-top-10 account-company-auth" id="xy" style="overflow-y:scroll;background-color:white;height:94%;width:98%;margin-left:2%;">
-		<div id="ddgl_id" class="row">
-			<form id="ddgl_form" class="row">
+		<div id="plc_id" class="row">
+			<form id="plc_form" class="row">
 				PLC
 			</form>
 		</div>
