--- a/smtcl_erp/WebRoot/html/plc.html
+++ b/smtcl_erp/WebRoot/html/plc.html
@@ -6,9 +6,40 @@
 </head>
 <body>
 	<div class="row margin-top-10 account-company-auth" id="xy" style="overflow-y:scroll;background-color:white;height:94%;width:98%;margin-left:2%;">
-		<div id="plc_id" class="row">
+		<div id="plc_id" class="row" style="margin-top:-45px;">
 			<form id="plc_form" class="row">
-				PLC
+				<div class="row">
+					<div class="plc_gongwei"></div>
+					<div class="plc_gongwei"></div>
+					<div class="plc_gongwei"></div>
+					<div class="plc_gongwei"></div>
+					<div class="plc_gongwei"></div>
+					<div class="plc_gongwei"></div>
+					<div class="plc_gongwei"></div>
+					<div class="plc_gongwei"></div>
+					<div class="plc_gongwei"></div>
+					<div class="plc_gongwei"></div>
+					<div class="plc_gongwei"></div>
+					<div class="plc_gongwei"></div>
+					<div class="plc_gongwei"></div>
+					<div class="plc_gongwei"></div>
+					<div class="plc_gongwei">1232333</div>
+				</div>
+				<div class="row">
+			        <div id="basedata_tab" class="col-md-11" style="margin-top:-7px;margin-left:-13px;">
+			            <div class="row orders-search">
+			                <div class="col-md-10" id="mainStatusBar">
+	                        	<input type="hidden" id="cuttool-status-bar-value" value=""/>
+			                    <div class="sesol-btn mainOrder select" data="1">装配区A</div>
+			                    <div class="sesol-btn mainOrder" data="2">装配区B</div>
+			                </div>
+			            </div>
+				    </div>
+				    <div id="stock1">1</div>
+				    <div id="stock2" style="display:none;">
+				    	2
+				    </div>
+				</div>
 			</form>
 		</div>
 	</div>
