--- a/smtcl_erp/WebRoot/html/h_home.html
+++ b/smtcl_erp/WebRoot/html/h_home.html
@@ -175,10 +175,10 @@
 		</div>
 	</div>
 	<div class="col-md-3" style="width:400px;"></div>
-	<!-- <div class="col-md-2">
+	<div class="col-md-2">
 		<a class="button button-glow button-rounded button-raised button-primary butRow" 
 		   id="showGDFrame">显示GDFrame</a>
-	</div> -->
+	</div>
 	<script type="text/javascript" src="/smtcl_erp/html/js/h_home.js"></script>
 </body>
 </html>
