--- a/smtcl_erp/WebRoot/html/kfcz.html
+++ b/smtcl_erp/WebRoot/html/kfcz.html
@@ -326,6 +326,10 @@
 	<div class="col-md-2">
 		<a class="button button-glow button-rounded button-raised button-primary butRow">库房操作</a>
 	</div>
+	<div class="col-md-2">
+		<a class="button button-glow button-rounded button-raised button-primary butRow" 
+		   id="showGDFrame">GDFrame</a>
+	</div>
 	<script type="text/javascript" src="/smtcl_erp/html/js/kfcz.js"></script>
 </body>
 </html>
