急停完成，基础设置 模组的工位类别限制，部分代码的优化

--- a/smtcl_erp/WebRoot/html/plc.html
+++ b/smtcl_erp/WebRoot/html/plc.html
@@ -1168,7 +1168,7 @@
 					            	<input id="DIZHI0_C" type="text" style="font-size:10px;width:70px;height:20px;" class="form-control"/>
 					            </div>
 						 		<div class="col-md-3 text-right" style="padding:5px 0 0 0;">
-					                <span style="font-size:12px;">选择PLC返回工会:</span>
+					                <span style="font-size:12px;">选择PLC返回工位:</span>
 					            </div>
 					            <div class="col-md-3" style="padding: 4px 2px 2px 2px;">
 					            	<select class="selectpicker" id="returnPlcA" style="font-size:12px;width:100%;">
@@ -1226,7 +1226,7 @@
 					            	<input id="DIZHI0_D" type="text" style="font-size:10px;width:70px;height:20px;" class="form-control"/>
 					            </div>
 						 		<div class="col-md-3 text-right" style="padding:5px 0 0 0;">
-					                <span style="font-size:12px;">选择PLC返回工会:</span>
+					                <span style="font-size:12px;">选择PLC返回工位:</span>
 					            </div>
 					            <div class="col-md-3" style="padding: 4px 2px 2px 2px;">
 					            	<select class="selectpicker" id="returnPlcB" style="font-size:12px;width:100%;">
