分解定时 新增pack类型

--- a/smtcl_erp/WebRoot/html/jcsz.html
+++ b/smtcl_erp/WebRoot/html/jcsz.html
@@ -532,7 +532,7 @@
 			                <span><span style="color:red;">*</span>pack类型:</span>
 			            </div>
 			            <div class="col-md-3">
-			                <input id="pack_leixing" type="text" class="form-control"/>
+			                <input id="pack_leixing" type="number" min="1" value="1" class="form-control"/>
 			            </div>
 						<div class="col-md-2">
 					        <div class="button button-primary button-rounded button-small" id="pack_selectBtn" 
@@ -547,13 +547,13 @@
 			                <span><span style="color:red;">*</span>默认生产线:</span>
 			            </div>
 			            <div class="col-md-3">
-			                <input id="pack_morenshengchanxian" type="text" class="form-control"/>
+			                <input id="pack_morenshengchanxian" type="number" min="1" value="1" class="form-control"/>
 			            </div>
 			            <div class="col-md-2 text-right" style="padding: 5px 0 0 0;">
 			                <span><span style="color:red;">*</span>电芯类型:</span>
 			            </div>
 			            <div class="col-md-3">
-			                <input id="pack_dianxinleixing" type="text" class="form-control"/>
+			                <input id="pack_dianxinleixing" type="number" min="1" value="1" class="form-control"/>
 			            </div>
 						<div class="col-md-2">
 					        <div class="button button-primary button-rounded button-small" id="pack_newBtn" 
